--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <section id="gallery">
             <h2>Растения с крупными листьями, используемые в озеленении интерьера</h2>
             <p>Диффенбахия</p>
-                <img src="/image/gallary.jpg" alt="Галерея">
+                <img src="image/gallary.jpg" alt="Галерея">
             <p>Монстера</p>
                 <img src="" alt="Монстера">
             <p>Сингониум</p>
