ссылки на картинки

--- a/index.html
+++ b/index.html
@@ -27,13 +27,11 @@
         <section id="gallery">
             <h2>Растения с крупными листьями, используемые в озеленении интерьера</h2>
             <p>Диффенбахия</p>
-                <img src="image/gallary.jpg" alt="Галерея">
+                <img src="img/dieffenbachia.jpg" alt="Диффенбахия">
             <p>Монстера</p>
-                <img src="" alt="Монстера">
+                <img src="img/monstera.jpg" alt="Монстера">
             <p>Сингониум</p>
-                <img src="" alt="Сингониум">
-            <p>Еще один цветок</p>
-                <img src="" alt="Галерея">
+                <img src="img/syngonium.jpg" alt="Сингониум">
         </section>
     <!-- Раздел с контактной информацией -->
         <section id="contact">
