изменение раасположения картинок

--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
         <section id="gallery">
             <h2>Растения с крупными листьями, используемые в озеленении интерьера</h2>
             <p>Диффенбахия</p>
-                <img src="img/dieffenbachia.jpg" alt="Диффенбахия">
+                <img src="images/dieffenbachia.jpg" alt="Диффенбахия">
             <p>Монстера</p>
-                <img src="img/monstera.jpg" alt="Монстера">
+                <img src="images/monstera.jpg" alt="Монстера">
             <p>Сингониум</p>
-                <img src="img/syngonium.jpg" alt="Сингониум">
+                <img src="images/syngonium.jpg" alt="Сингониум">
         </section>
     <!-- Раздел с контактной информацией -->
         <section id="contact">
