--- a/index.html
+++ b/index.html
@@ -15,22 +15,22 @@
         <section id="about">
             <h2>Полезные свойства комнатных растений</h2>
             <p>Оформление дома живыми цветами и растениями важно не только для красивого оформления, но и для общего благополучия в домашней обстановке.</p>
-            <p>Комнатные растения</p>
+            <p><strong>Комнатные растения</strong></p>
             <ul>
-                <li>помогают очистить воздух в помещении, способствуя здоровью членов семьи</li>
-                <li>положительно влияют на настроение и создают психологический комфорт</li>
-                <li>помогают создать стильный и зеленый интерьер дома</li>
-                <li>делают дом уютнее и придают ему природную атмосферу</li>
+                <li><em>очищают</em> воздух в помещении, способствуя здоровью членов семьи</li>
+                <li>положительно <em>влияют</em> на настроение и создают психологический комфорт</li>
+                <li><em>помогают</em> создать стильный и зеленый интерьер дома</li>
+                <li><em>делают</em> дом уютнее и придают ему природную атмосферу</li>
             </ul>
         </section>
     <!-- Раздел с изображением -->
         <section id="gallery">
             <h2>Растения с крупными листьями, используемые в озеленении интерьера</h2>
-            <p>Диффенбахия</p>
+            <p><strong><em>Диффенбахия</em></strong></p>
                 <img src="images/dieffenbachia.jpg" alt="Диффенбахия">
-            <p>Монстера</p>
+            <p><strong><em></em>Монстера</em></strong></p>
                 <img src="images/monstera.jpg" alt="Монстера">
-            <p>Сингониум</p>
+            <p><strong><em></em>Сингониум</em></strong></p>
                 <img src="images/syngonium.jpg" alt="Сингониум">
         </section>
     <!-- Раздел с контактной информацией -->
