--- a/index.html
+++ b/index.html
@@ -17,24 +17,27 @@
             <p>Оформление дома живыми цветами и растениями важно не только для красивого оформления, но и для общего благополучия в домашней обстановке.</p>
             <p><strong>Комнатные растения</strong></p>
             <ul>
-                <li><em>очищают</em> воздух в помещении, способствуя здоровью членов семьи</li>
-                <li>положительно <em>влияют</em> на настроение и создают психологический комфорт</li>
-                <li><em>помогают</em> создать стильный и зеленый интерьер дома</li>
-                <li><em>делают</em> дом уютнее и придают ему природную атмосферу</li>
+                <li><strong><em>очищают</em></strong> воздух в помещении, способствуя здоровью членов семьи</li>
+                <li>положительно <strong><em>влияют</em></strong> на настроение и создают психологический комфорт</li>
+                <li><strong><em>помогают</em></strong> создать стильный и зеленый интерьер дома</li>
+                <li><strong><em>делают</em></strong> дом уютнее и придают ему природную атмосферу</li>
             </ul>
         </section>
     <!-- Раздел с изображением -->
         <section id="gallery">
             <h2>Растения с крупными листьями, используемые в озеленении интерьера</h2>
-            <p><strong><em>Диффенбахия</em></strong></p>
+            <h4>Диффенбахия</h4>
                 <img src="images/dieffenbachia.jpg" alt="Диффенбахия">
-            <p><strong><em></em>Монстера</em></strong></p>
+            <h4>Монстера</h4>
                 <img src="images/monstera.jpg" alt="Монстера">
-            <p><strong><em></em>Сингониум</em></strong></p>
+            <h4>Сингониум</h4>
                 <img src="images/syngonium.jpg" alt="Сингониум">
         </section>
     <!-- Раздел с контактной информацией -->
         <section id="contact">
+            <br>
+            <br>
+            <br>
             <h2>Контакты</h2>
             <p>Напишите на почту<a href="mailto:nadi.flora@example.com"> nadi.flora@example.com</a>.</p>
         </section>
